# Casestudy_Leroy_Ee

./: LICENSE  README.md  pyproject.toml  requirements.txt
conf/base/: parameters_invoke_llm.yml  parameters_path.yml  parameters_preprocessing.yml
notebooks/: eda.ipynb
src/casestudy_bmw_business_reporting/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/casestudy_bmw_business_reporting/pipelines/: pipelines_generate_report.py  pipelines_invoke_llm.py  pipelines_preprocessing.py
src/casestudy_leroy_ee/: pipeline_registry.py
src/casestudy_leroy_ee/pipelines/: pipelines_preprocessing.py
src/utils/: kedro_utils.py
tests/pipelines/: test_pipelines_generate_report.py  test_pipelines_invoke_llm.py  test_pipelines_preprocessing.py
