[project]
name = "Casestudy_Leroy_Ee"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Leroy Ee Bing Yao", email = "leroyeby@gmail.com"},
]
dependencies = []
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
