[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "Casestudy_Leroy_Ee"
version = "0.1.0"
authors = [
    {name = "Leroy Ee Bing Yao", email = "leroyeby@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro>=1.1.1",
]

[project.scripts]
casestudy-leroy-ee = "casestudy_leroy_ee.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
dev = [
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.12.0",
]

[tool.pdm]
distribution = false

[tool.setuptools.dynamic.version]
attr = "casestudy_leroy_ee.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "casestudy_leroy_ee"
project_name = "Casestudy_Leroy_Ee"
kedro_init_version = "1.1.1"
tools = "['Linting', 'Testing', 'Custom Logging', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/casestudy_leroy_ee -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "PL",
    "T201",
]
ignore = [
    "E501",
]

[tool.kedro_telemetry]
project_id = "501eb1694222474ab9251041788c4e31"
