[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "casestudy_bmw_business_reporting"
version = "0.1.0"
authors = [
    {name = "Leroy Ee Bing Yao", email = "leroyeby@gmail.com"},
]
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro>=1.1.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "openpyxl>=3.1.5",
    "matplotlib>=3.10.7",
    "google-genai>=1.52.0",
    "sqlalchemy>=2.0.44",
    "langchain-community>=0.4.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
casestudy-bmw_business_reporting = "casestudy_bmw_business_reporting.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1, <2.0",
    "pytest>=9.0.1",
    "ruff~=0.12.0",
]

[tool.pdm]
distribution = false

[tool.setuptools.dynamic.version]
attr = "casestudy_bmw_business_reporting.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "casestudy_bmw_business_reporting"
project_name = "Casestudy_BMW_Business_Reporting"
kedro_init_version = "1.1.1"
tools = "['Linting', 'Testing', 'Custom Logging', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/casestudy_bmw_business_reporting -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "PL",
    "T201",
]
ignore = [
    "E501",
]

[tool.kedro_telemetry]
project_id = "501eb1694222474ab9251041788c4e31"
